# random-things

./: .gitignore  Cargo.toml  README  README.md  cargo.toml  clippy.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
menu_macro/: Cargo.toml
menu_macro/src/: lib.rs
rust/: main.rs  mc_renderer.rs  paragraph_guesser.rs  stuff.rs  type_speedtest.rs  wordle.rs
rust/macros/menu_macro/src/: lib.rs
src/assets/: phrases.json
src/rust/: main.rs  mc_renderer.rs  mod.rs  paragpragh guesser.rs  paragraph_guesser.rs  stuff.rs  type_speedtest.rs  wordle.rs
