[package]
name = "random-things"
version = "0.1.0"
edition = "2021"

[dependencies]
menu_macro = { path = "rust/macros/menu_macro" }

rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }

[[bin]]
name = "random-things"
path = "rust/main.rs"

[workspace]
members = [
    "rust/macros/menu_macro",
]
