[package]
name = "random-things"
version = "0.1.3"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
image = {  version = "0.25.5", features = ["png"] }
rusttype = "0.9.3"
arboard = "3.4.1"
crossterm = "0.28.1"
serde_json = "1.0.133"

[[bin]]
name = "random-things"
path = "rust/main.rs"
